Bug 795119: Complain coherently when evalInGlobal{,withBindings} is passed a CCW to a global, not a global. r=luke